# minimal_Rust_OS

./: idea.docx
os_from_blog/: Cargo.toml
os_from_blog/.cargo/: config.toml
os_from_blog/src/: main.rs  vga_buffer.rs
