[package]
name = "os_from_blog"
version = "0.1.0"
authors = ["Gaurav Singh <gp5in9h@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# to disable unwinding and save binary memory size 
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"